syntax = "proto3";
package notification_v1;
import "google/protobuf/struct.proto";

import "payment/v1/paymentMessage.proto";

message NotificationTemplate {
  string id = 1;
  string type = 2;
  string template = 3;
  google.protobuf.Struct templateVars = 4;
}

enum NotificationTypeEnum {
  NOTIFICATION_EMAIL_USER_OTP = 0;
  NOTIFICATION_EMAIL_PAYMENT_ORDER_CREATED = 1;
}

message SendOtpEmailNotificationRequest {
  string otp = 1;
  string email = 2;
  NotificationTypeEnum notificationType = 3;
}

message SendEmailPaymentOrderCreateRequest {
  string email = 1;
  payment_v1.Payment payment = 2;
  NotificationTypeEnum notificationType = 3;
}